# nanocli

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
configs/: tool_use_instructions.txt
skills/hello-world/: SKILL.md
skills/repo-tour/: SKILL.md
src/nanocli/: cli.py  core.py  tool.py
src/nanocli/_dev/: __init__.py  mock_server.py
tests/: test_cli.py  test_compaction.py  test_core.py  test_skill.py  test_tool.py
