[project]
dependencies = [
  "openai>=2.2.0",
]
description = "Add your description here"
name = "nanocli"
readme = "README.md"
requires-python = ">=3.12"
version = "0.0.1"

[project.scripts]
nanocli = "nanocli.cli:main"
nanocli-mock = "nanocli._dev.mock_server:main"

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.9.20,<0.10.0"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
  "I", # Default rules
  "E4",
  "E7",
  "E9",
  "F", # Function arguments should annotate types
  "ANN001", # Public function should annotate return type
  "ANN201", # Common bugs
  "B", # Timezone issues
  "DTZ", # Sort inputs
  "I", # Common errors
  "PLE", # Remove unused noqa
  "RUF100", # Modern syntax
  "UP",
]

[tool.pyright]
include = ["src"]
pythonVersion = "3.12"
venv = ".venv"
venvPath = "."

[dependency-groups]
dev = [
    "flask>=3.1.2",
    "ipython>=9.9.0",
    "pytest>=9.0.2",
]
